[gd_scene load_steps=5 format=3 uid="uid://d3pmwvyul36cy"]

[ext_resource type="Script" path="res://scripts/ai/refilling_ai.gd" id="1_16otg"]
[ext_resource type="PackedScene" uid="uid://bed0fmavm0x6e" path="res://scenes/characters/kitty_display.tscn" id="1_bp1wb"]
[ext_resource type="Texture2D" uid="uid://bsl2t6vuw1kqn" path="res://textures/objects/box.png" id="2_nlj1s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tc1sj"]
radius = 4.0

[node name="Refilling AI" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_16otg")
speed = 75.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tc1sj")

[node name="KittyDisplay" parent="." instance=ExtResource("1_bp1wb")]
position = Vector2(0, 9)

[node name="SearchTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="HoldBox" type="Sprite2D" parent="."]
visible = false
z_index = 4
position = Vector2(3, -8)
texture = ExtResource("2_nlj1s")
hframes = 4
frame = 3

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
path_postprocessing = 1
simplify_path = true
radius = 32.0
debug_enabled = true

[connection signal="timeout" from="SearchTimer" to="." method="_lookForShelf"]
